# libcppmanip

./: .gitignore  .rspec  CMakeLists.txt  LICENSE  README.md  Rakefile  buildpath.rb  cucumber.yml  libcppmanip.kdev4
features/: clang_workarounds.feature  extract_method.feature  installation.feature
features/docs/: clang_workarounds.feature  extract_function.feature  extract_method.feature  installation.feature
features/lib/steps/: steps.rb
features/lib/support/: OffsetConverter.rb  ranges.rb  replacements.rb
features/spec/: OffsetCoverter_spec.rb
features/steps/: errors.rb  replacements.rb  steps.rb
include/: CppManip.hpp  ExtractMethodError.hpp  ExtractMethodListener.hpp  Replacement.hpp  SourceLocation.hpp  SourceRange.hpp  SourceReplacement.hpp
runner/: CMakeLists.txt
runner/src/: CommandLineParser.cpp  CommandLineParser.hpp  SourceLocationConverter.cpp  extract_function.cpp  extract_method.cpp  main.cpp
runner/src/cppmanip/: SourceReplacementSerialization.hpp
runner/src/cppmanip/runner/: CommandLineParser.cpp  CommandLineParser.hpp
runner/test/: CommandLineParserTest.cpp  SourceLocationConverterTest.cpp
runner/test/cppmanip/runner/: CommandLineParserTest.cpp
src/: ClangToolArgsBuilder.cpp  CommandLineParser.cpp  CommandLineParser.hpp  CppManip.cpp  CppManip.hpp  OffsetRange.hpp  SourceExtractor.hpp  SourceSelection.hpp  TextFileOps.cpp  TextFileOps.hpp  TextOperationApplier.cpp  TextOperationApplier.hpp  main.cpp
test/: ClangToolArgsBuilderTest.cpp  OffsetRangeTest.cpp  TextOperationApplierTest.cpp
